[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/VolumeControl.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/sfx.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/music.png" type="Texture" id=3]

[node name="VolumeControl" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxButton" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 2.0
margin_right = 30.0
margin_bottom = 9.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="."]
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SfxButton" to="." method="_on_SfxButton_pressed"]
[connection signal="pressed" from="MusicButton" to="." method="_on_MusicButton_pressed"]
